--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.16",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "swagger-jsdoc": "^6.0.0-rc.3",
+    "swagger-ui-express": "^4.1.5"
   }
 }
