--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "package.json",
+  "name": "MyApp",
   "version": "1.0.0",
   "description": "Node Express Mongo",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon app.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.16",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
-    "swagger-jsdoc": "^6.0.0-rc.3",
-    "swagger-ui-express": "^4.1.5"
+    "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0"
   }
 }
