Adding new changes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_CONNECTION = mongodb+srv://m001-student:m001-mongodb-basics@shastry.ttomw.mongodb.net/test?authSource=admin&replicaSet=atlas-8svdau-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+DB_CONNECTION = mongodb+srv://m001-student:m001-mongodb-basics@shastry.ttomw.mongodb.net/sample_training
+?authSource=admin&replicaSet=atlas-8svdau-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
