--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "MyApp",
+  "name": "nodetemplate",
   "version": "1.0.0",
-  "description": "Node Express Mongo",
+  "description": "node mongo template",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js --exec babel-node",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.16",
+    "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
-  },
-  "devDependencies": {
-    "eslint": "^7.16.0"
   }
 }
