--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3"
   }
 }
